--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
+    <link rel="stylesheet" href="./resources/css/style.css" />
   </head>
 
   <body>
@@ -25,7 +25,7 @@
       <div class="aboutMe">
         <h2>About Me</h2>
         <p>
-          I am Trained DevOps Engineer with Edureka; and a self taught Front End Developer have done my Masters in Product Design and Manufacturing. Have hands on EXPERIENCE  and knowledge of
+          Trained DevOps Engineer with Edureka; and a self taught Front End Developer have done my Masters in Product Design and Manufacturing. Have hands on EXPERIENCE  and knowledge of
           various DevOps and Front End Tools and Technologies. Proficient in deploying webapps by implementing Continuous Integration tool and Delivery pipelines on AWS Cloud Platform with various other tools.
         </p>
       </div>
@@ -37,7 +37,7 @@
           target="_blank"
           rel="noopener noreferrer">
           <img
-          src="./assets/images/frontendmentor-svgrepo-com.svg"
+          src="./resources/img/frontendmentor-svgrepo-com.svg"
           alt="leetcode"
         />
             <span class="tooltiptext">frontendmentor</span>
@@ -50,7 +50,7 @@
             rel="noopener noreferrer"
           >
             <img
-              src="./assets/images/leetcode-svgrepo-com.svg"
+              src="./resources/img/leetcode-svgrepo-com.svg"
               alt="leetcode"
             />
             <span class="tooltiptext">leetcode</span>
@@ -61,7 +61,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="./assets/images/HackerRank_logo.png" alt="hackerrank" />
+            <img src="./resources/img/HackerRank_logo.png" alt="hackerrank" />
             <span class="tooltiptext">hackerrank</span>
           </a>
         </div>
@@ -72,35 +72,35 @@
 
         <div>
           <a href="#" class="tooltip"
-            ><img src="./assets/images/c++.png" alt="c++ logo" />
+            ><img src="./resources/img/c++.png" alt="c++ logo" />
             <span class="tooltiptext">C++</span></a
           >
           <a href="#" class="tooltip"
-            ><img src="./assets/images/java-vertical.svg" alt="java" />
+            ><img src="./resources/img/java-vertical.svg" alt="java" />
             <span class="tooltiptext">Java</span></a
           >
           <a href="#" class="tooltip"
-            ><img src="./assets/images/python-svgrepo-com.svg" alt="python" />
+            ><img src="./resources/img/python-svgrepo-com.svg" alt="python" />
             <span class="tooltiptext">Python</span></a
           >
         </div>
 
         <div>
           <a href="#" class="tooltip"
-            ><img src="./assets/images/html5.png" alt="html5" />
+            ><img src="./resources/img/html5.png" alt="html5" />
             <span class="tooltiptext">HTML5</span></a
           >
           <a href="#" class="tooltip"
-            ><img src="./assets/images/CSS3.png" alt="css3" />
+            ><img src="./resources/img/CSS3.png" alt="css3" />
             <span class="tooltiptext">CSS3</span></a
           >
           <a href="#" class="tooltip"
-            ><img src="./assets/images/sass.png" alt="sass" />
+            ><img src="./resources/img/sass.png" alt="sass" />
             <span class="tooltiptext">SASS</span></a
           >
           <a href="#" class="tooltip"
             ><img
-              src="./assets/images/javascript-logo-svgrepo-com.svg"
+              src="./resources/img/javascript-logo-svgrepo-com.svg"
               alt="javascript"
             />
             <span class="tooltiptext">javascript</span></a
@@ -117,12 +117,12 @@
 
         <div>
           <a href="#" class="tooltip"
-            ><img src="./assets/images/nodejs-svgrepo-com.svg" alt="nodejs" />
+            ><img src="./resources/img/nodejs-svgrepo-com.svg" alt="nodejs" />
             <span class="tooltiptext">NodeJS</span></a
           >
           <a href="#" class="tooltip"
             ><img
-              src="./assets/images/nginx-logo-svgrepo-com.svg"
+              src="./resources/img/nginx-logo-svgrepo-com.svg"
               alt="nginx"
             />
             <span class="tooltiptext">NGINX</span></a
@@ -131,39 +131,39 @@
 
         <div>
           <a href="#" class="tooltip"
-            ><img src="./assets/images/bash-icon-svgrepo-com.svg" alt="bash" />
+            ><img src="./resources/img/bash-icon-svgrepo-com.svg" alt="bash" />
             <span class="tooltiptext">bash</span></a
           >
           <a href="#" class="tooltip"
-            ><img src="./assets/images/linux-svgrepo-com.svg" alt="linux" />
+            ><img src="./resources/img/linux-svgrepo-com.svg" alt="linux" />
             <span class="tooltiptext">linux</span></a
           >
           <a href="#" class="tooltip"
-            ><img src="./assets/images/ubuntu-svgrepo-com.svg" alt="ubuntu" />
+            ><img src="./resources/img/ubuntu-svgrepo-com.svg" alt="ubuntu" />
             <span class="tooltiptext">Ubuntu</span></a
           >
         </div>
 
         <div>
           <a href="#" class="tooltip"
-            ><img src="./assets/images/github-svgrepo-com.svg" alt="git" />
+            ><img src="./resources/img/github-svgrepo-com.svg" alt="git" />
             <span class="tooltiptext">github</span></a
           >
         </div>
 
         <div>
           <a href="#" class="tooltip"
-            ><img src="./assets/images/terraform.png" alt="terraform" />
+            ><img src="./resources/img/terraform.png" alt="terraform" />
             <span class="tooltiptext">terraform</span></a
           >
           <a href="#" class="tooltip">
-            <img src="./assets/images/ansible-svgrepo-com.svg" alt="ansible" />
+            <img src="./resources/img/ansible-svgrepo-com.svg" alt="ansible" />
             <span class="tooltiptext">ansible</span></a
           >
 
           <a href="#" class="tooltip">
             <img
-              src="./assets/images/docker-logo-svgrepo-com.svg"
+              src="./resources/img/docker-logo-svgrepo-com.svg"
               alt="docker"
             />
             <span class="tooltiptext">Docker</span>
@@ -171,7 +171,7 @@
 
           <!-- <a href="#" class="tooltip">
             <img
-              src="./assets/images/kubernetes.png"
+              src="./resources/img/kubernetes.png"
               alt="kubernetes"
             />
             <span class="tooltiptext">Kubernetes</span>
@@ -179,7 +179,7 @@
         </div>
         <div>
           <a href="#" class="tooltip"
-            ><img src="./assets/images/aws-svgrepo-com.svg" alt="aws" />
+            ><img src="./resources/img/aws-svgrepo-com.svg" alt="aws" />
             <span class="tooltiptext">amazon web services</span></a
           >
           <!-- <a href="#" class="tooltip">
@@ -209,13 +209,13 @@
         <div>
           <a href="#" class="tooltip"
             ><img
-              src="./assets/images/githubactions-svgrepo-com.svg"
+              src="./resources/img/githubactions-svgrepo-com.svg"
               alt="githubactions"
             />
             <span class="tooltiptext">githubactions</span></a
           >
           <a href="#" class="tooltip"
-            ><img src="./assets/images/jenkins-svgrepo-com.svg" alt="Jenkins" />
+            ><img src="./resources/img/jenkins-svgrepo-com.svg" alt="Jenkins" />
             <span class="tooltiptext">Jenkins</span></a
           >
         </div>
@@ -223,18 +223,18 @@
         <div>
           <a href="#" class="tooltip"
             ><img
-              src="./assets/images/prometheus-svgrepo-com.svg"
+              src="./resources/img/prometheus-svgrepo-com.svg"
               alt="prometheus"
             />
             <span class="tooltiptext">prometheus</span></a
           >
           <a href="#" class="tooltip"
-            ><img src="./assets/images/grafana-svgrepo-com.svg" alt="grafana" />
+            ><img src="./resources/img/grafana-svgrepo-com.svg" alt="grafana" />
             <span class="tooltiptext">grafana</span></a
           >
           <a href="#" class="tooltip">
             <img
-              src="./assets/images/aws-cloudwatch-svgrepo-com.svg"
+              src="./resources/img/aws-cloudwatch-svgrepo-com.svg"
               alt="awscloudwatch"
             />
             <span class="tooltiptext">AWS Cloud Watch</span>
@@ -439,7 +439,7 @@
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="./assets/images/linkedin-svgrepo-com.svg" alt="linkedin" />
+          <img src="./resources/img/linkedin-svgrepo-com.svg" alt="linkedin" />
           <span class="tooltiptext">Linkedin-Profile</span>
         </a>
 
@@ -448,7 +448,7 @@
         target="_blank"
         rel="noopener noreferrer"
       >
-        <img src="./assets/images/gmail-svgrepo-com.svg" alt="gmail" />
+        <img src="./resources/img/gmail-svgrepo-com.svg" alt="gmail" />
       </a>
 
       </div>
@@ -456,11 +456,8 @@
 
 
     <audio controls autoplay loop id="audio">
-      <source src="./assets/audio/audio_1.mp3" type="audio/mp3" />
-      <source
-        src="https://github.com/AkshayV30/AkshayV30/raw/master/assets/audio/audio_1.mp3"
-        type="audio/mp3"
-      />
+      <source src="./resources/audio/audio_1.mp3" type="audio/mp3" />
+     
       audio
     </audio>
 
