--- a/index.html
+++ b/index.html
@@ -435,18 +435,18 @@
         <h2>CERTIFICATIONS | TRAINING</h2>
         <ul>
           <li>
-            IBM Applied DevOps Engineering Specialization | Coursera May. 2023 | Credential ID: <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/LF66EPAQ25KG"  target="_blank"
+            IBM Applied DevOps Engineering Specialization | Coursera | May 2023 | Credential ID: <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/LF66EPAQ25KG"  target="_blank"
             rel="noopener noreferrer"> LF66EPAQ25KG </a> 
           </li>
 
 
           <li>
-            DevOps Engineer | EDUREKA Aug. 2020 | Certificate ID: <a href="https://www.edureka.co/verify"  target="_blank"
+            DevOps Engineer | EDUREKA  | Aug. 2020 | Certificate ID: <a href="https://www.edureka.co/verify"  target="_blank"
             rel="noopener noreferrer">   Y3V1G41M</a> 
            
           </li>
           <li>
-            ANSYS | CADD-Centre Feb. 2018
+            ANSYS | CADD-Centre | Feb. 2018
             http://www.caddcentre.com/caddVerification.php Student ID No.:
             M171016812
           </li>
