--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
             <span class="tooltiptext">Docker</span>
           </a>
 
-          <!-- <a href="#" class="tooltip">
+          <a href="#" class="tooltip">
             <img
               src="./resources/img/kubernetes.png"
               alt="kubernetes"
             />
             <span class="tooltiptext">Kubernetes</span>
-          </a> -->
+          </a>
         </div>
         <div>
           <a href="#" class="tooltip"
