--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>hello</h2>
+    <header class="sticky-header"><nav></nav></header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
