--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./resources/css/style.css" />
     <title>Document</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+    </style>
   </head>
   <body>
-    <header class="sticky-header"><nav></nav></header>
+    <header class="sticky-header">
+      <h1>Portfolio</h1>
+    </header>
     <main></main>
     <footer></footer>
   </body>
